appId: com.weather_app
---
- clearState: com.weather_app
- launchApp
- tapOn:
    id: "kyiv"
- assertVisible: "Kyiv"
- tapOn: "Navigate up"
- tapOn:
    id: "search"
- inputText: "Wroc"
- assertVisible:
    id: "wroclaw"
- tapOn:
    id: "clear-search"
- hideKeyboard
- assertVisible:
    id: 'warsaw'
